mvn test correction