@@ -1,3 +1,3 @@
 def call(){
-    sh 'mvn test --illegal-access=permit'
+    sh 'mvn test'
 }
